fix tags problem on mobile inline-grid

--- a/src/components/PostTags.module.scss
+++ b/src/components/PostTags.module.scss
@@ -1,6 +1,7 @@
 .tag-container {
     a {
         text-decoration: none;
+        display: inline-grid;
     }
 
     span {
